# Qwen-Finance-LLM

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Qwen-Agent/: README.md  pyproject.toml
Qwen-Agent/qwen-financial-agent/: .env  agent.py  evalset8b8956.evalset.json  prompt.py
Qwen-GRPO/: README.md  ZennyKenny_FinancialReasoning.py  clearn.py  format_check.py  grpo_config.json  main.py  model_reward.py  pyproject.toml  train_grpo_distributed.py
Qwen-GRPO/Qwen-OutputDir/: README.md
Qwen-GRPO/Qwen-OutputDir/checkpoint-1/: config.json  generation_config.json
Qwen-GRPO/Utils/: utils.py
Qwen-GRPO/preprocess/: 4DFinanceQuestion.py  NYPNaturalReasoningFinance.py
Qwen-GRPO/preprocess/Financial_Decisions_Reasoning_Dataset/: data-00000-of-00001.arrow  dataset_info.json  state.json
Qwen-GRPO/wandb/: latest-run
Qwen-GRPO/wandb/offline-run-20250729_065048-ixcc7amg/: run-ixcc7amg.wandb
Qwen-GRPO/wandb/offline-run-20250729_065156-e25bmeag/: run-e25bmeag.wandb
Qwen-GRPO/wandb/offline-run-20250729_065358-1uggmhp4/: run-1uggmhp4.wandb
Qwen-GRPO/wandb/offline-run-20250729_065707-s2ovr19q/: run-s2ovr19q.wandb
Qwen-GRPO/wandb/offline-run-20250729_065707-s2ovr19q/files/: requirements.txt
Qwen-GRPO/wandb/offline-run-20250729_065839-aglwnpld/: run-aglwnpld.wandb
Qwen-GRPO/wandb/run-20250731_061134-89awnx3i/: run-89awnx3i.wandb
Qwen-GRPO/wandb/run-20250731_061134-89awnx3i/files/: requirements.txt  wandb-metadata.json
Qwen-SFT/: README.md  deepspeed_config.json  eval_mix_dataset.py  eval_sft.py  main.py  pyproject.toml  qwen_qlora_merged.py  sft_config.json  train_sft_distributed.py
Qwen-SFT/dataset/BigScienceP3/Classify/: data-00000-of-00001.arrow  dataset_info.json  state.json
Qwen-SFT/dataset/BigScienceP3/QA/: dataset_info.json  state.json
Qwen-SFT/dataset/Diweanshu/Finance-Reasoning/: dataset_info.json  state.json
Qwen-SFT/dataset/H3Instruct/: dataset_info.json  state.json
Qwen-SFT/dataset/Josephgflowers/Finance-Instruct-500k-Formated/: dataset_info.json  state.json
Qwen-SFT/dataset/Open-R1/OpenMathReasoning/: dataset_info.json  state.json
Qwen-SFT/dataset/Vamshirvk/Finance-Instruct-500k-reasoning/: data-00000-of-00001.arrow  dataset_info.json  state.json
Qwen-SFT/mixed_dataset/: state.json
Qwen-SFT/preprocess/: BigScienceP3.py  DSFinanceReasoning.py  JFFinanceInstruct.py  Josephgflowers_FinanceInstruct.py  VFinanceInstructReasoning.py  ZKSyntheticFinancialDecisionsReasoning.py  mix_dataset.py
(+118 files in other folders)
