[project]
name = "qwen-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "google-adk>=1.14.1",
    "langchain-community>=0.3.29",
    "litellm>=1.77.1",
    "vllm>=0.10.2",
    "yfinance>=0.2.66",
]
