[project]
name = "llm-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.9.0",
    "datasets>=4.0.0",
    "deepspeed>=0.17.2",
    "huggingface-hub>=0.33.4",
    "jinja2>=3.1.6",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "wandb>=0.21.0",
    "flash-attn>=2.8.2",
]
